--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,6 @@ concurrency:
 
 permissions:
   contents: write
-  id-token: write
 
 jobs:
   # ==========================================================================
@@ -42,18 +41,6 @@ jobs:
             exit 1
           fi
           echo "✅ Version format valid: $VERSION"
-
-      - name: Validate secrets
-        run: |
-          missing=()
-          [ -z "$NPM_TOKEN" ] && missing+=("NPM_TOKEN")
-          if [ ${#missing[@]} -gt 0 ]; then
-            echo "::error::Missing required secrets: ${missing[*]}"
-            exit 1
-          fi
-          echo "✅ All required secrets are configured"
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   # ==========================================================================
   # Job 2: Build Electron apps for each platform
@@ -108,80 +95,41 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: List build output
-        run: |
-          echo "Release directory contents:"
-          ls -la release/ || true
-        shell: bash
-
-      - name: Upload release directory
+      - name: Upload release artifacts
         uses: actions/upload-artifact@v4
         with:
           name: release-${{ matrix.platform }}
-          path: release/
+          path: |
+            release/*.dmg
+            release/*.zip
+            release/*.exe
+            release/*.msi
+            release/*.AppImage
+            release/*.deb
           retention-days: 7
-          if-no-files-found: error
+          if-no-files-found: warn
 
   # ==========================================================================
-  # Job 3: Publish all npm packages
+  # Job 3: Create GitHub Release
   # ==========================================================================
-  publish-npm:
-    name: Publish to npm
+  github-release:
+    name: Create GitHub Release
     needs: [validate, build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-          registry-url: "https://registry.npmjs.org"
-
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
         with:
-          path: release/
+          path: release-files/
           pattern: release-*
           merge-multiple: true
 
-      - name: List downloaded artifacts
+      - name: List release files
         run: |
-          echo "Downloaded artifacts:"
-          find release/ -type d -maxdepth 1 | head -20
-          echo ""
-          echo "Looking for app bundles/binaries:"
-          find release/ -name "openwork*" -type f | head -20
-
-      - name: Publish npm packages
-        run: node ./scripts/publish-npm.js ${{ needs.validate.outputs.version }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  # ==========================================================================
-  # Job 4: Create GitHub Release
-  # ==========================================================================
-  github-release:
-    name: Create GitHub Release
-    needs: [validate, build, publish-npm]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download all build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts/
-          pattern: release-*
-          merge-multiple: true
-
-      - name: Collect release files
-        run: |
-          mkdir -p release-files
-          # Copy installer files (dmg, exe, AppImage, deb, zip)
-          find artifacts/ -type f \( -name "*.dmg" -o -name "*.exe" -o -name "*.AppImage" -o -name "*.deb" -o -name "*.zip" -o -name "*.msi" \) -exec cp {} release-files/ \;
           echo "Release files:"
-          ls -la release-files/
+          ls -la release-files/ || echo "No files found"
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -191,17 +139,6 @@ jobs:
             ## openwork v${{ needs.validate.outputs.version }}
 
             ### Installation
-
-            **npm (recommended)**
-            ```bash
-            npm install -g openwork
-            openwork
-            ```
-
-            **npx (no install)**
-            ```bash
-            npx openwork
-            ```
 
             **Homebrew (macOS)**
             ```bash
@@ -214,18 +151,17 @@ jobs:
 
             ### Platform Support
 
-            | Platform | npm Package | Direct Download |
-            |----------|-------------|-----------------|
-            | macOS (Apple Silicon) | `@langchain/openwork-darwin-arm64` | `.dmg` |
-            | macOS (Intel) | `@langchain/openwork-darwin-x64` | `.dmg` |
-            | Linux (x64) | `@langchain/openwork-linux-x64` | `.AppImage`, `.deb` |
-            | Linux (ARM64) | `@langchain/openwork-linux-arm64` | `.AppImage`, `.deb` |
-            | Windows (x64) | `@langchain/openwork-win32-x64` | `.exe` |
+            | Platform | Download |
+            |----------|----------|
+            | macOS (Apple Silicon) | `.dmg` |
+            | macOS (Intel) | `.dmg` |
+            | Linux (x64) | `.AppImage`, `.deb` |
+            | Linux (ARM64) | `.AppImage`, `.deb` |
+            | Windows (x64) | `.exe` |
 
             ### Links
 
             - [Documentation](https://github.com/langchain-ai/openwork#readme)
-            - [npm package](https://www.npmjs.com/package/openwork)
           files: release-files/*
           draft: false
           prerelease: ${{ contains(needs.validate.outputs.version, '-') }}
